fixed the google maps api project and the weather map project

--- a/google_maps_api.html
+++ b/google_maps_api.html
@@ -3,98 +3,62 @@
 <head>
     <style type="text/css">
         #map-canvas {
-            width: 100%;
-            height: 650px;
-        }
-        body {
-            background-color: #6669B1;
-            text-align: center;
-            color: #E6ECF0;
-            font-size:1.5em;
-            letter-spacing: .3em;
+            width: 770px;
+            height: 481px;
         }
     </style>
 </head>
 <body>
-    <h1>GOOGLE MAP</h1>
     <!-- div to hold map -->
     <div id="map-canvas"></div>
     <!-- Load the Google Maps API [DON'T FORGET TO USE A KEY] -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_70YXvXz-8j3-d7PGY8DKkfxtIvyW9dg"></script>
     <!-- Script to show address on map -->
     <script type="text/javascript">
-
-        (function () {
+        (function() {
             "use strict";
             // Set our map options
             var mapOptions = {
                 // Set the zoom level
-                zoom: 18,
-                center: {lat: 29.4154934, lng: -98.5079414},
-                mapTypeId: google.maps.MapTypeId.ROADMAP
+                zoom: 23,
+                // This sets the center of the map at our location
+                center: {
+                    lat:  29.426791,
+                    lng: -98.489602
+                }
             };
+            // Render the map
+            var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
             var geocoder = new google.maps.Geocoder();
-
-            // Geocode our address
-            geocoder.geocode({ "218 Produce Row, San Antonio, TX 78207": mtCafeAddress }, function(results, status) {
-
+            // Include code from previous example
+// Set our address to geocode
+            var address = "240 E Houston St, San Antonio, TX 78205";
+// Init geocoder object
+            var geocoder = new google.maps.Geocoder();
+            // Create lat and long for our marker position
+            var subway = { lat: 29.426653, lng: -98.490183 };
+// Add the marker to our existing map
+            var marker = new google.maps.Marker({
+                position: subway,
+                map: map
+            });
+            // Create a new infoWindow object with content
+            var infowindow = new google.maps.InfoWindow({
+                content: "Where the magic happens...but with sandwiches."
+            });
+// Open the window using our map and marker
+            infowindow.open(map, marker);
+// Geocode our address
+            geocoder.geocode({ "address": address }, function(results, status) {
                 // Check for a successful result
                 if (status == google.maps.GeocoderStatus.OK) {
-
                     // Recenter the map over the address
                     map.setCenter(results[0].geometry.location);
                 } else {
-
                     // Show an error message with the status if our request fails
                     alert("Geocoding was not successful - STATUS: " + status);
                 }
             });
-
-            var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-            var codeup = {lat: 29.426791, lng: -98.489602};
-
-            var marker = new google.maps.Marker({
-                position: codeup,
-                map: map
-            });
-
-            var mtCafe = {lat: 29.42489665, lng: -98.49999825882006};
-            var mtCafeAddress = "218 Produce Row, San Antonio, TX 78207";
-
-            var rosarios = {lat: 29.415665, lng: -98.489538};
-            var rosariosAddress = "Rosario's, 910 S Alamo St, San Antonio, TX 78205";
-
-
-            var tacoHaven = {lat: 29.409983, lng: -98.486688};
-            var tacoHavenAddress = "Taco Haven, 1032 S Presa St, San Antonio, TX 78210";
-
-
-            var infoWindowForMtCafe = new google.maps.InfoWindow({
-                content: 'This is the Mi Tierra Cafe!'
-            });
-
-            marker.addEventListener('click', function () {
-                infoWindowForMtCafe.open(map, marker);
-            });
-
-            var infowWindowForRosarios = new google.maps.InfoWindow({
-                content: 'This is Rosarios Cafe!'
-            });
-
-            marker.addEventListener('click', function () {
-                infowWindowForRosarios.open(map, marker);
-            });
-
-            var infoWindowForTacoHaven = new google.maps.Marker({
-                content: 'this is taco haven!'
-            });
-
-            marker.addEventListener('click', function () {
-                infoWindowForTacoHaven.open(map, marker);
-            });
-
-
         })();
-
     </script>
 </body>
