--- a/weather_map.html
+++ b/weather_map.html
@@ -1,68 +1,146 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+
     <title>Weather Application</title>
+
+    <!--stylesheet-->
+    <link rel="stylesheet" type="text/css" href="css/weather_map.css">
 </head>
 <body>
 
-    <h1>Weather Application</h1>
+    <h1 id="appName"> W E A T H E R </h1>
 
-    <div id="LocationSearch">
 
-        <input id="searchLat" type="text" placeholder="Search Lat..." required>
 
-            <input id="searchLon" type="text" placeholder="Search Lon..." required>
+<!--this is the div that's holding the weather info-->
+    <div id="weather">
 
-                 <button id="searchButton" type="submit">Go!</button>
+        </div>
 
-    </div>
-
-    <div id="weather"></div>
+    <!--this is the div that's holding the map-->
+    <div id="map"></div>
 
     <!-- Load the Google Maps API -->
+
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_70YXvXz-8j3-d7PGY8DKkfxtIvyW9dg"></script>
 
+    <!--Google maps API key : AIzaSyA_70YXvXz-8j3-d7PGY8DKkfxtIvyW9dg-->
+
     <!--api key a4e920906d10f5ca2cfa3a7a2d73d720-->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <!--JS-->
     <script>
         "use strict";
-        $('#searchButton').click(function () {
-
-            var weatherCard = "";
-            var lonSearch = $('#searchLon').val();
-            var latSearch = $('#searchLat').val();
-
-            function mapSearch() {
-                $.get('http://api.openweathermap.org/data/2.5/forecast', {
-                    APPID: 'a4e920906d10f5ca2cfa3a7a2d73d720',
-                    lat: latSearch,
-                    lon: lonSearch,
-                    units: "imperial"
-                }).done(function (weather) {
-                    //header info
-                    var d = new Date();
-                    var dat = d.getDate();
-                    weatherCard += "<h1>" + weather.city.name + "  3-day forecast" + "</h1>";
-                    weatherCard += "<h1>" + "Location: " + weather.city.name + "</h1>";
-                    //    xDay forecast
-                    for (var i = 0; i <= 16; i += 8) {
-                        weatherCard += "<hr>";
-                        weatherCard += "<h2>" + "Date: " + (dat++) + "</h2>";
-                        weatherCard += "<h2>" + "Temperature: " + Math.floor(weather.list[i].main.temp) + "˚F" + "</h2>";
-                        weatherCard += "<h3>" + "Clouds: " + weather.list[i].clouds.all + "</h3>";
-                        weatherCard += "<h3>" + "Humidity: " + weather.list[i].main.humidity + "%" + "</h3>";
-                        weatherCard += "<h3>" + "Wind: " + Math.floor(weather.list[i].wind.speed) + "mph" + "</h3>";
-                        weatherCard += "<h3>" + "Pressure: " + weather.list[i].main.pressure + "mbar" + "</h3>";
-                    }
-                    //display info in the html
-                    $('#weather').html(weatherCard);
-                });
+        //    ##################################################################konami code
+        var allowedKeys = { 37: 'left', 38: 'up', 39: 'right', 40: 'down', 65: 'a', 66: 'b'};
+        var konamiCode = ['up', 'up', 'down', 'down', 'left', 'right', 'left', 'right', 'b', 'a'];
+        var konamiCodePosition = 0;
+        document.addEventListener('keydown', function (e) {
+            var key = allowedKeys[e.keyCode];
+            var requiredKey = konamiCode[konamiCodePosition];
+            if (key == requiredKey) {
+                konamiCodePosition++;
+                if (konamiCodePosition == konamiCode.length) {
+                    var audio = document.createElement('audio');
+                    audio.src = ('Mario-walking.wav');
+                    audio.play();
+                    konamiCodePosition = 0;
+                }
+            } else {
+                konamiCodePosition = 0;
             }
+        });
+
+
+        //THIS IS THE GOOGLE MAP
+
+        var lat = 29.423017;
+        var long = -98.48527;
+        var marker = null;
+        var city = '';
+        var initialize = {
+            zoom: 4,
+            center: {
+                lat: lat,
+                lng: long
+            }
+        };
+        var map = new google.maps.Map(document.getElementById("map"), initialize);
+        google.maps.event.addListener(map, 'dblclick', function (event) {
+
+            //call function to create marker
+
+            console.log(event.latLng.lat());
+            console.log(event.latLng.lng());
+            lat = event.latLng.lat();
+            long = event.latLng.lng();
+
+            //delete the old marker
+
+            if (marker) {
+                marker.setMap(null);
+            }
+
+            //Create a new marker
+
+            marker = new google.maps.Marker({position: event.latLng, map: map});
+            $.get('http://api.openweathermap.org/data/2.5/forecast', {
+                APPID: 'a4e920906d10f5ca2cfa3a7a2d73d720',
+                lat: lat,
+                lon: long
+
+            }).done(function (data, status, jqXhr) {
+                city = data.city.name;
+                console.log(city);
+
+            });
             mapSearch();
         });
+
+        google.maps.event.addDomListener(window, 'load', initialize);
+
+        //##########################THIS IS THE WEATHER SEARCH FUNCTION#################################################
+
+        var weatherCard = "";
+        function mapSearch() {
+            $.get('http://api.openweathermap.org/data/2.5/forecast', {
+                APPID: 'a4e920906d10f5ca2cfa3a7a2d73d720',
+                lat: lat,
+                lon: long,
+                units: "imperial"
+            }).done(function (weather) {
+                //header info
+                var d = new Date();
+                var dat = d.getDate();
+                weatherCard += "<h1>" + weather.city.name + "  3-day forecast" + "</h1>";
+                weatherCard += "<h1>" + "Location: " + weather.city.name + "</h1>";
+
+                //    xDay forecast
+                for (var i = 0; i <= 16; i += 8) {
+                    weatherCard += "<hr>";
+                    weatherCard += "<h2>" + "Date: " + (dat++) + "</h2>";
+                    weatherCard += "<h2>" + "Temperature: " + Math.floor(weather.list[i].main.temp) + "˚F" + "</h2>";
+                    weatherCard += "<h3>" + "Clouds: " + weather.list[i].clouds.all + "</h3>";
+                    weatherCard += "<h3>" + "Humidity: " + weather.list[i].main.humidity + "%" + "</h3>";
+                    weatherCard += "<h3>" + "Wind: " + Math.floor(weather.list[i].wind.speed) + "mph" + "</h3>";
+                    weatherCard += "<h3>" + "Pressure: " + weather.list[i].main.pressure + "mbar" + "</h3>";
+                }
+                //display info in the html
+                $('#weather').html(weatherCard);
+            });
+        }
     </script>
 </body>
 </html>
+
+<!--extra things to do eventually
+-add an event listener so that the background color changes with relevance to the current temperature
+-add a history bar and a clear history button
+-add animations
+-->
