--- a/weather_map.html
+++ b/weather_map.html
@@ -58,19 +58,20 @@
         });
 
 
-        //THIS IS THE GOOGLE MAP
+        //THIS IS THE GOOGLE MAP ################################################
 
         var lat = 29.423017;
         var long = -98.48527;
         var marker = null;
         var city = '';
         var initialize = {
-            zoom: 4,
+            zoom: 8,
             center: {
                 lat: lat,
                 lng: long
             }
         };
+
         var map = new google.maps.Map(document.getElementById("map"), initialize);
         google.maps.event.addListener(map, 'dblclick', function (event) {
 
@@ -104,6 +105,7 @@
         });
 
         google.maps.event.addDomListener(window, 'load', initialize);
+
 
         //##########################THIS IS THE WEATHER SEARCH FUNCTION#################################################
 
