--- a/weather_map.html
+++ b/weather_map.html
@@ -1,43 +1,26 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-
     <title>Weather Application</title>
-
     <!--stylesheet-->
     <link rel="stylesheet" type="text/css" href="css/weather_map.css">
 </head>
 <body>
-
     <h1 id="appName"> W E A T H E R </h1>
-
-
-
 <!--this is the div that's holding the weather info-->
-    <div id="weather">
-
-        </div>
-
+    <div id="weather"></div>
     <!--this is the div that's holding the map-->
     <div id="map"></div>
-
     <!-- Load the Google Maps API -->
-
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_70YXvXz-8j3-d7PGY8DKkfxtIvyW9dg"></script>
-
     <!--Google maps API key : AIzaSyA_70YXvXz-8j3-d7PGY8DKkfxtIvyW9dg-->
-
     <!--api key a4e920906d10f5ca2cfa3a7a2d73d720-->
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
     <!--JS-->
     <script>
         "use strict";
-        //    ##################################################################konami code
+        //    ##################################################################sneaky code
         var allowedKeys = { 37: 'left', 38: 'up', 39: 'right', 40: 'down', 65: 'a', 66: 'b'};
         var konamiCode = ['up', 'up', 'down', 'down', 'left', 'right', 'left', 'right', 'b', 'a'];
         var konamiCodePosition = 0;
@@ -56,10 +39,7 @@
                 konamiCodePosition = 0;
             }
         });
-
-
-        //THIS IS THE GOOGLE MAP ################################################
-
+        //This is the google map ################################################
         var lat = 29.423017;
         var long = -98.48527;
         var marker = null;
@@ -71,44 +51,28 @@
                 lng: long
             }
         };
-
         var map = new google.maps.Map(document.getElementById("map"), initialize);
         google.maps.event.addListener(map, 'dblclick', function (event) {
-
-            //call function to create marker
-
             console.log(event.latLng.lat());
             console.log(event.latLng.lng());
             lat = event.latLng.lat();
             long = event.latLng.lng();
-
-            //delete the old marker
-
             if (marker) {
                 marker.setMap(null);
             }
-
-            //Create a new marker
-
             marker = new google.maps.Marker({position: event.latLng, map: map});
             $.get('http://api.openweathermap.org/data/2.5/forecast', {
                 APPID: 'a4e920906d10f5ca2cfa3a7a2d73d720',
                 lat: lat,
                 lon: long
-
-            }).done(function (data, status, jqXhr) {
+            }).done(function (data) {
                 city = data.city.name;
                 console.log(city);
-
             });
             mapSearch();
         });
-
         google.maps.event.addDomListener(window, 'load', initialize);
-
-
-        //##########################THIS IS THE WEATHER SEARCH FUNCTION#################################################
-
+        //##########################weather search#################################################
         var weatherCard = "";
         function mapSearch() {
             $.get('http://api.openweathermap.org/data/2.5/forecast', {
@@ -122,7 +86,6 @@
                 var dat = d.getDate();
                 weatherCard += "<h1>" + weather.city.name + "  3-day forecast" + "</h1>";
                 weatherCard += "<h1>" + "Location: " + weather.city.name + "</h1>";
-
                 //    xDay forecast
                 for (var i = 0; i <= 16; i += 8) {
                     weatherCard += "<hr>";
@@ -140,8 +103,8 @@
     </script>
 </body>
 </html>
-
 <!--extra things to do eventually
+-add google search bar with auto-fill
 -add an event listener so that the background color changes with relevance to the current temperature
 -add a history bar and a clear history button
 -add animations
