--- a/weather_map.html
+++ b/weather_map.html
@@ -52,11 +52,12 @@
             }
         };
         var map = new google.maps.Map(document.getElementById("map"), initialize);
-        google.maps.event.addListener(map, 'dblclick', function (event) {
+        google.maps.event.addListener(map, 'click', function (event) {
             console.log(event.latLng.lat());
             console.log(event.latLng.lng());
             lat = event.latLng.lat();
             long = event.latLng.lng();
+            $('#weather').html('');
             if (marker) {
                 marker.setMap(null);
             }
@@ -73,7 +74,6 @@
         });
         google.maps.event.addDomListener(window, 'load', initialize);
         //##########################weather search#################################################
-        var weatherCard = "";
         function mapSearch() {
             $.get('http://api.openweathermap.org/data/2.5/forecast', {
                 APPID: 'a4e920906d10f5ca2cfa3a7a2d73d720',
@@ -82,6 +82,7 @@
                 units: "imperial"
             }).done(function (weather) {
                 //header info
+                var weatherCard = "";
                 var d = new Date();
                 var dat = d.getDate();
                 weatherCard += "<h1>" + weather.city.name + "  3-day forecast" + "</h1>";
@@ -100,6 +101,7 @@
                 $('#weather').html(weatherCard);
             });
         }
+
     </script>
 </body>
 </html>
