finished the promises exercise

--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -77,7 +77,7 @@
                     body.style.backgroundColor = '#FFF';
                 }
             }
-            document.getElementById('btn3').addEventListener('click', changeBackgroundColorToggle);
+            document.getElementById('btn3').addEventListener('click', changeBackGroundColor);
         })();
     </script>
 </body>
